lil-bits/src/app/globals.css
* {
  margin: 0;
}

body {
  margin: 0;
  padding: 0;
  background-color: #a5b381;
}

main {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.header {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  height: 6rem;
}

.active {
  padding: 10px;
  border-radius: 10px;
}

.inactive {
  display: none;
}

.footer {
  margin-top: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: #575e43;
  color: white;
}

.info {
  display: flex;
  flex-direction: column;
}

.address {
  margin-top: 2rem;
  margin-bottom: 0.25rem;
}
.phone,
.email {
  margin: 0.25rem;
  text-decoration: none;
  color: white;
}

.opening_hours {
  margin-bottom: 2rem;
}

.opening_text,
.opening_weekdays,
.opening_weekends {
  margin: 0.5rem;
}

.react-datepicker__time-container
  .react-datepicker__time
  .react-datepicker__time-box
  ul.react-datepicker__time-list
  li.react-datepicker__time-list-item--disabled {
  display: none;
}

.link_button,
.return_to_home_button {
  border: none;
  background-color: #a86e5f;
  border-radius: 1rem;
  color: white;
  padding: 2rem 3rem;
  margin: 0.125rem 0 0.125rem;
}

.link_button:hover,
.return_to_home_button:hover {
  background-color: #575e43;
}

.return_to_home_container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* All datepicker classes here because costumising 
some parts of it requires it to be in globals.css */

.date_picker {
  border-radius: 1rem;
  text-align: center;
  border: 2px solid #a86e5f;
  width: 50%;
  display: block;
  margin: 0.25rem auto;
  padding: 2rem 3rem;
}

.react-datepicker__input-container {
  width: 100%;
}

.react-datepicker-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

